--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-socket.io": "^3.0.10"
+    "vue-3-socket.io": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
